--- a/html/chiTietSanPham.html
+++ b/html/chiTietSanPham.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="../css/style_chiTietSanPham.css">
+    <link rel="stylesheet" href="../templates/css/style_chiTietSanPham.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <head>
         <title>Thông Tin Sản Phẩm</title>
@@ -10,7 +10,7 @@
             <!-- Phần mua sách -->
             <div class="book">
                 <div>
-                    <img class="book-img" src="../img/demoimg.jpg">
+                    <img class="book-img" src="../templates/img/demoimg.jpg">
                 </div>
                 <div class="book-info">
                     <h2 class="book-title">Book Title</h2>
