--- a/html/donHang.html
+++ b/html/donHang.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="../css/style_donHang.css">
+    <link rel="stylesheet" href="../templates/css/style_donHang.css">
     <head>
         <title>Đơn hàng - Vinabook.com</title>
         <meta charset="utf-8">
